--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.14.0",
+    "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "mongoose": "^4.6.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-router": "^2.7.0"
   },
   "devDependencies": {
+    "axios": "^0.14.0",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
